@@ -109,8 +109,8 @@ detected.
 .TP
 \fB\-d\fR, \fB\-\-data\fR=@\fIFN\fR
 reads one or more data strings from the file called \fIFN\fR, limit 2048
-bytes. Otherwise this option is the same as the previous item that reads
-from stdin.
+bytes. The contents of the file is decoded in the same fashion as stdin
+described in the previous option.
 .TP
 \fB\-D\fR, \fB\-\-descriptor\fR=\fIDN\fR
 where \fIDN\fR is a descriptor name (string) as found in the Element
