@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20160607] [svn: r711]
+Changelog for sg3_utils-1.43 [20160612] [svn: r712]
   - sg_bg_ctl: new Background control command (spc4r08)
   - sg_senddiag: add --timeout=SEC option
   - sg_sanitize: add --timeout=SEC option
@@ -41,6 +41,7 @@ Changelog for sg3_utils-1.43 [20160607] [svn: r711]
   - sg_lib: add SSC maintenance in/out sa names
     - add read buffer(16) command mode names
     - add sg_decode_transportid_str()
+    - add sg_get_llnum_nomult()
     - implement 'format' argument in dStrHexStr()
     - add Microcode activation sense descriptor spc5r10
   - sg_lib_data: sync asc/ascq codes with T10 20160425
